--- a/sensors/internal.yaml
+++ b/sensors/internal.yaml
@@ -1,5 +1,5 @@
 - platform: dallas
-  address: 0xD20000060A2AC428
+  address: 0x4b00000608b4ba28
   name: "Internal Temperature"
   id: internal_temperature
   internal: true
