--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,10 @@ jobs:
       - uses: actions/checkout@master
 
       - uses: esphome/build-action@v1
+        id: esphome-build
         with:
           yaml_file: app.yaml
+      - uses: actions/upload-artifact@v2
+        with:
+          name: ESP32-POE-1Wire-${{ steps.esphome-build.outputs.name }}
+          path: ${{ steps.esphome-build.outputs.name }}
