--- a/sensors/temperature/haus_ug_heizung_hk_eg_vl.yaml
+++ b/sensors/temperature/haus_ug_heizung_hk_eg_vl.yaml
@@ -1,6 +1,6 @@
 
 - platform: dallas
-  address: 0x0516B5762DFF28
+  address: 0x0d0516B5762DFF28
   name: "haus/ug/heizung/hk_eg_vl"
   id: haus_ug_heizung_hk_eg_vl
   internal: true
