--- a/sensors/temperature/ug_heizung_gas_rl.yaml
+++ b/sensors/temperature/ug_heizung_gas_rl.yaml
@@ -1,6 +1,6 @@
 
 - platform: dallas
   address: 0x100118335639FF28
-  name: "haus/ug/heizung/gas_rl"
-  id: haus_ug_heizung_gas_rl
+  name: "ug/heizung/gas_rl"
+  id: ug_heizung_gas_rl
   internal: true
