--- a/sensors/temperature/ug_heizung_raum.yaml
+++ b/sensors/temperature/ug_heizung_raum.yaml
@@ -1,6 +1,6 @@
 
 - platform: dallas
   address: 0xc401143390AA3528
-  name: "haus/ug/heizung/raum"
-  id: haus_ug_heizung_raum
+  name: "ug/heizung/raum"
+  id: ug_heizung_raum
   internal: true
