--- a/sensors/temperature/ug_lueftung_eingang.yaml
+++ b/sensors/temperature/ug_lueftung_eingang.yaml
@@ -1,6 +1,6 @@
 
 - platform: dallas
   address: 0x950114336F554028
-  name: "haus/ug/lueftung/eingang"
-  id: haus_ug_lueftung_eingang
+  name: "ug/lueftung/eingang"
+  id: ug_lueftung_eingang
   internal: true
