--- a/sensors/temperature/ug_heizung_gas_vl.yaml
+++ b/sensors/temperature/ug_heizung_gas_vl.yaml
@@ -1,6 +1,6 @@
 
 - platform: dallas
-  address: 0xa2021833568DFF28
+  address: 0xA2021833568DFF28
   name: "ug/heizung/gas_vl"
   id: ug_heizung_gas_vl
   internal: true
